# Financial-Monte-Carlo

./: .bazelrc  .gitignore  BUILD  Dockerfile  LICENSE  MODULE.bazel  README.md  benchmark  build_and_enter_container  common_copts.bzl  container  envvars.sh  generate_tests.bzl  profile  pyproject.toml  run  test
benchmark/: BM_test.cpp  BUILD  generate_benchmarks.bzl
benchmarks/: BM_hashmap_lookup_vs_direct_access.cpp  BM_logger_buffer_size.cpp  BM_map_traversal_time.cpp  BM_rttr_vs_map.cpp  BM_sys_days_vs_int.cpp  BM_test.cpp  BM_truncated_normal_impls.cpp  BUILD
data/: logging_channels.json  sim_config.json  single_run_example.json
include/: CliArgs.hpp  Event.hpp  Logger.hpp  Money.hpp  Person.hpp  RandomVariable.hpp  SimConfig.hpp  TimeseriesDataLogger.hpp  csv.hpp  file_io.hpp  math.hpp  test_utils.hpp  utils.hpp
src/: CliArgs.hpp  main.cpp
src/lib/: Bond.cpp  Bond.hpp  CliArgs.hpp  Event.cpp  Event.hpp  Logger.cpp  Logger.hpp  Money.cpp  Money.hpp  Person.cpp  RandomVariable.cpp  SimConfig.cpp  SimConfig.hpp  SimulationController.cpp  SimulationController.hpp  TimeseriesDataLogger.cpp  TimeseriesDataLogger.hpp  run_simulation.hpp
src/protos/: AnnualInflationConfig.pb.cc  Event.pb.cc  Event.pb.h  (+9 more)
tests/: BUILD  IT_Person.cpp  UT_AnnualInflation.cpp  UT_BondMarket.cpp  UT_Bonds.cpp  UT_Event.cpp  UT_Logger.cpp  UT_Money.cpp  UT_RandomVariable.cpp  UT_StockMarket.cpp  UT_cpp23.cpp  UT_csv.cpp  UT_file_io.cpp  UT_json_experiments.cpp  UT_loggable.cpp  UT_math.cpp  UT_rttr.cpp  UT_test.cpp  UT_time.cpp  _IT_Person.cpp  generate_tests.bzl
tools/: utils.py
(+25 files in other folders)
