[project]
name = "finance-monte-carlo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "ruff>=0.14.5",
]

[dependency-groups]
dev = ["pytest>=9.0.1"]

[project.scripts]
plot-timeseries = "tools.visualization.plot_timeseries_data:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
